# solana_ed25519_verify

./: Cargo.toml
program/: Cargo.toml
program/src/: lib.rs
src/: curve.rs  lib.rs  scalar.rs
tests/: program_test.rs
