[package]
name = "solana_ed25519_verify"
version = "0.2.0"
edition = "2021"
description = "A helper library for verifying signatures in a Solana program without CPIs or the Ed25519 precompile program"
authors = ["Sammy Harris <sammy@stegabob.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/stegabob/solana_ed25519_verify"

[dependencies]
anyhow = "1"
arrayref = "0.3"
curve25519-dalek = { version = "4.1", default-features = false, features = ["zeroize"] }
sha2 = "0.10"
solana-curve25519 = "4.0"
solana-pubkey = "4.0"
getrandom = { version = "0.1", features = ["dummy"] }


[dev-dependencies]
solana-sdk = "3.0"