[workspace]
members = ["program"]

[package]
name = "solana_ed25519_verify"
version = "0.2.0"
edition = "2021"
description = "A helper library for verifying signatures in a Solana program without CPIs or the Ed25519 precompile program"
authors = ["Sammy Harris <sammy@stegabob.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/stegabob/solana_ed25519_verify"

[dependencies]
anyhow = "1"
arrayref = "0.3"
sha2 = "0.10"
getrandom = { version = "0.1", features = ["dummy"] }

# Only for native builds (tests) - NOT compiled for BPF
[target.'cfg(not(target_os = "solana"))'.dependencies]
curve25519-dalek = { version = "4.1", default-features = false }

[dev-dependencies]
solana-sdk = "3.0"
solana-program-test = "3.0"
tokio = { version = "1", features = ["full"] }
ed25519-verify-test-program = { path = "program", features = ["no-entrypoint"] }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
